add create/get user routs
